# llm-structure

./: README.md  llm_structure.py  pyproject.toml
.github/workflows/: publish.yaml
